# cuCascade_fork

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  pixi.toml
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmark/: CMakeLists.txt  benchmark_disk_converter.cpp  benchmark_main.cpp  benchmark_representation_converter.cpp
cmake/: cuCascadeConfig.cmake.in
docs/: ARCHITECTURE.md  data_batch_state_transitions.md
include/cucascade/: error.hpp
include/cucascade/cuda/: event.hpp
include/cucascade/data/: common.hpp  cpu_data_representation.hpp  data_batch.hpp  data_repository.hpp  data_repository_manager.hpp  disk_data_representation.hpp  disk_file_format.hpp  disk_io_backend.hpp  gpu_data_representation.hpp  io_backend_registry.hpp  representation_converter.hpp
include/cucascade/memory/: common.hpp  config.hpp  disk_access_limiter.hpp  disk_table.hpp  error.hpp  fixed_size_host_memory_resource.hpp  host_table.hpp  memory_reservation.hpp  memory_reservation_manager.hpp  memory_space.hpp  numa_region_pinned_host_allocator.hpp  oom_handling_policy.hpp  reservation_aware_resource_adaptor.hpp  reservation_manager_configurator.hpp  small_pinned_host_memory_resource.hpp  stream_pool.hpp  topology_discovery.hpp
include/cucascade/utils/: atomics.hpp
include/data/: common.hpp  cpu_data_representation.hpp  data_batch.hpp  data_repository.hpp  data_repository_manager.hpp  gpu_data_representation.hpp
include/memory/: common.hpp  config.hpp  disk_access_limiter.hpp  fixed_size_host_memory_resource.hpp  host_table.hpp  memory_reservation.hpp  memory_reservation_manager.hpp  memory_space.hpp  notification_channel.hpp  null_device_memory_resource.hpp  numa_region_pinned_host_allocator.hpp  oom_handling_policy.hpp  reservation_aware_resource_adaptor.hpp  reservation_manager_configurator.hpp  stream_pool.hpp
include/utils/: overloaded.hpp
scripts/: verify_gds_environment.sh
src/cuda/: CMakeLists.txt  event.cpp
src/data/: CMakeLists.txt  bandwidth_profiler.cpp  cpu_data_representation.cpp  data_batch.cpp  data_repository.cpp  data_repository_manager.cpp  disk_data_representation.cpp  disk_file_format.cpp  gds_io_backend.cpp  gpu_data_representation.cpp  io_backend_internal.hpp  io_backend_registry.cpp  io_worker.hpp  kvikio_io_backend.cpp  pipeline_io_backend.cpp  representation_converter.cpp
src/memory/: CMakeLists.txt  common.cpp  disk_access_limiter.cpp  error.cpp  fixed_size_host_memory_resource.cpp  memory_reservation.cpp  memory_reservation_manager.cpp  memory_space.cpp  notification_channel.cpp  null_device_memory_resource.cpp  numa_region_pinned_host_allocator.cpp  oom_handling_policy.cpp  reservation_aware_resource_adaptor.cpp  reservation_manager_configurator.cpp  small_pinned_host_memory_resource.cpp  stream_pool.cpp  topology_discovery.cpp
test/: CMakeLists.txt  unittest.cpp  unittest_topology_discovery.cpp
test/data/: CMakeLists.txt  test_data_batch.cpp  test_data_batch_view.cpp  test_data_repository.cpp  test_data_repository_manager.cpp  test_data_representation.cpp  test_disk_host_converters.cpp  test_disk_io_backend.cpp  test_gpu_disk_converters.cpp  test_io_worker.cpp  test_representation_converter.cpp
test/memory/: CMakeLists.txt  test_fixed_size_host_memory_resource.cpp  test_gpu_kernels.cu  test_gpu_kernels.cuh  test_memory_reservation_manager.cpp  test_small_pinned_host_memory_resource.cpp  test_topology_discovery.cpp
test/utils/: CMakeLists.txt  cudf_test_utils.cpp  cudf_test_utils.hpp  mock_test_utils.hpp
